# python-project-template

./: .gitignore  LICENSE  README.md  README.rst  hello.py  pyproject.toml
example/: hello.py
tests/: test_hello.py
