[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Gabriel Viso Carrera <4035415+gvisoc@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"
pre-commit = "^2.10.1"
flake8 = "^3.8.4"
black = "^20.8b1"

[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401"
max-line-length = 79
max-complexity = 18
select = "B,C,E,F,W,T4,B9"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
